--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- TITRE -->
 		<div>
 			Bienvenue dans cette formation GIT !
-			Encore du travail 
+			Encore du travail !!
 		</div>
 		
 	</body>
